Fix 100vh on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 .App {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,13 +21,13 @@ body {
 }
 
 #canvas {
+  min-height: 100vh;
   overflow: hidden;
-  height: 100vh;
   width: 100%;
   background-color: aliceblue;
   position: relative;
   cursor: grab;
-  /* touch-action: none; */
+  touch-action: none;
 }
 
 #credits {
